# bizmetrics-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  meu_relatorio.xlsx  pyproject.toml  relatorio_metricas.xlsx
.agent/workflows/: bizmetrics.md
.github/workflows/: ci.yml
bizmetrics/: __init__.py  __main__.py  cli.py  config.py  db.py
bizmetrics/connectors/: __init__.py  base.py  demo.py  google_analytics.py  meta_ads.py
bizmetrics/exporters/: __init__.py  csv_exporter.py  excel_exporter.py
tests/: test_connectors.py
